[package]
name = "portal_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "6.0.0"
dotenv = "0.15.0"
miette = "7.4.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
terminal_size = "0.4.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
webhook = "2.1.2"
rookie = "0.4.0"
websocket = "0.27.1"
web-sys = { version = "0.3.77", features = ["Location", "Window"] }
